Tune Day 13 implementations for idiomatic quality
Key improvements across all 14 tuned implementations:

- Unified Part 1/Part 2 reflection functions with target_diff parameter
  (0 = perfect reflection, 1 = exactly one smudge)
- Eliminated code duplication between parts
- Applied language-specific idioms:
  - Java: records, Streams API, modern Java 17+ features
  - Rust: Option<usize>, iterators with .all()/.zip()/.find()
  - C++: removed using namespace std, std::transform_reduce
  - Go: builtin min(), cleaner algorithm without string reversal
  - Ruby: all?, zip, sum, find patterns
  - PHP: strict_types, full type hints, PSR-12 compliance
  - Perl: List::Util, function signatures
  - Clojure: pos?, some instead of loop/recur
  - Common Lisp: zerop/plusp, efficient string handling
  - Bash: nameref variables to avoid subshells
  - Zig: stdout writer instead of debug.print
  - ARM64: comprehensive documentation, cinc idiom

All implementations verified: Part 1: 33520, Part 2: 34824

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>